--- a/sass/components/_about-me.scss
+++ b/sass/components/_about-me.scss
@@ -143,10 +143,12 @@
     }
 
     .about-me-face {
+        margin-left: 131px;
         padding-bottom: 300px;
     }
 
     .about-me-photo {
+        display: none;
         position: absolute;
         margin-top: 78px;
         margin-left: 30px;
@@ -159,8 +161,8 @@
         line-height: 32px;
         font-size: 24px;
         font-weight: 500;
-        margin-left: 641px;
-        margin-top: -667px;
+        margin-left: 245px;
+        margin-top: -315px;
     }
 
     .about-me-position {
@@ -179,12 +181,14 @@
         font-size: 24px;
         font-weight: 500;
         margin-bottom: 0px;
+        margin-left: 62px;
     }
 
     .about-me-text {
+        width: 485px;
         font-family: "Montserrat", sans-serif;
-        margin-left: 635px;
-        margin-top: -539px;
+        margin-left: 111px;
+        margin-top: -237px;
         color: #705A66;
         line-height: 24px;
         font-size: 18px;
