--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -208,6 +208,7 @@
 // планшет
 @media (min-width: 769px) and (max-width: 1023px) {
     .footer {
+        height: 338px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -221,8 +222,8 @@
         line-height: 24px;
         display: flex;
         flex-direction: column;
-        margin-left: 100px;
-        margin-top: 88px;
+        margin-left: -31px;
+        margin-top: 300px;
         margin-bottom: -3px;
         text-decoration: none;
     }
@@ -292,14 +293,16 @@
     }
 
     .footer-title {
-        margin-left: 490px;
-        margin-top: -190px;
+        margin-top: -321px;
+        position: absolute;
+        margin-left: 278px;
     }
 
     .footer-right-photo {
+        left: 421px;
         position: absolute;
-        margin-left: 944px;
-        margin-top: -124px;
+        margin-left: 62px;
+        margin-top: -100px;
     }
 
     .footer-right {
