--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -68,27 +68,30 @@
         background-image: url("../../img/register/bg-section-register.png");
         background-repeat: no-repeat;
         background-size: cover;
-        height: 565px;
+        height: 810px
     }
 
     .register-photo-text {
-        padding-top: 0px;
-        padding-left: 27px;
+        width: 310px;
+        padding-top: 80px;
+        padding-left: 79px;
     }
 
     .register-text {
         font-family: "Montserrat", sans-serif;
-        padding-top: 0px;
+        margin-top: -263px;
+        padding-top: 280px;
+        padding-left: 84px;
         color: #F5F7F8;
-        line-height: 24px;
-        font-size: 18px;
-        width: 393px;
+        line-height: 22px;
+        font-size: 16px;
+        width: 322px;
     }
 
     .register-photo-title {
-        margin-top: 80px;
-        margin-left: 80px;
-        height: 300px;
+        margin-top: -74px;
+        margin-left: 43px;
+        height: 403px;
         width: 500px;
     }
 }
