--- a/sass/components/_signup.scss
+++ b/sass/components/_signup.scss
@@ -109,12 +109,14 @@
 // планшет
 @media (min-width: 769px) and (max-width: 1023px) {
     .signup {
-        margin-top: 29px;
+        margin-left: 139px;
+        margin-top: -209px;
         color: #F5F7F8;
     }
 
     .signup-block {
         display: flex;
+        flex-direction: column;
         gap: 140px;
     }
 
