--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -1,4 +1,5 @@
 .register {
+    background-color: #705A66;
     background-image: url("../../img/register/bg-section-register.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -31,6 +32,7 @@
 
 @media screen and (max-width: 768px) {
     .register {
+        background-color: #705A66;
         background-image: url("../../img/register/bg-section-register.png");
         background-repeat: no-repeat;
         background-size: cover;
@@ -65,6 +67,7 @@
 // планшет
 @media (min-width: 769px) and (max-width: 1023px) {
     .register {
+        background-color: #705A66;
         background-image: url("../../img/register/bg-section-register.png");
         background-repeat: no-repeat;
         background-size: cover;
