--- a/sass/main.css
+++ b/sass/main.css
@@ -13,6 +13,10 @@ body {
   margin-bottom: 120px;
 }
 
+a {
+  text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
   body {
     padding: 0px;
@@ -23,6 +27,9 @@ body {
     margin: 0 auto;
     overflow: hidden;
     margin-bottom: 120px;
+  }
+  a {
+    text-decoration: none;
   }
 }
 @media (min-width: 769px) and (max-width: 1023px) {
@@ -35,6 +42,9 @@ body {
     margin: 0 auto;
     overflow: hidden;
     margin-bottom: 120px;
+  }
+  a {
+    text-decoration: none;
   }
 }
 .menu {
@@ -1880,6 +1890,7 @@ body {
   }
 }
 .register {
+  background-color: #705A66;
   background-image: url("../../img/register/bg-section-register.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -1909,6 +1920,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .register {
+    background-color: #705A66;
     background-image: url("../../img/register/bg-section-register.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -1938,6 +1950,7 @@ body {
 }
 @media (min-width: 769px) and (max-width: 1023px) {
   .register {
+    background-color: #705A66;
     background-image: url("../../img/register/bg-section-register.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -2373,7 +2386,7 @@ body {
   }
   .instagram-btn-all {
     margin-top: 56px;
-    margin-left: 7px;
+    margin-left: 47px;
     width: 355px;
     display: flex;
     align-items: center;
@@ -2397,7 +2410,7 @@ body {
   .instagram-btn-arrows {
     display: block;
     z-index: 5;
-    margin-left: 58px;
+    margin-left: 19px;
     margin-top: -197px;
     position: absolute;
     display: flex;
@@ -2612,7 +2625,7 @@ body {
     line-height: 24px;
     display: flex;
     flex-direction: column;
-    margin-left: 61px;
+    margin-left: 40px;
     margin-top: 88px;
     margin-bottom: -3px;
     text-decoration: none;
@@ -2671,11 +2684,11 @@ body {
   .footer-title {
     margin-top: -379px;
     position: absolute;
-    margin-left: 92px;
+    margin-left: 83px;
   }
   .footer-right-photo {
     position: absolute;
-    margin-left: 62px;
+    margin-left: 41px;
     margin-top: 80px;
   }
   .footer-right {
@@ -5033,15 +5046,15 @@ body.show-modal .modal {
   }
   .information-delivery-info {
     font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 22px;
     color: #705A66;
     list-style: auto;
   }
   .information-delivery-text {
     font-family: "Montserrat", sans-serif;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 18px;
     color: #705A66;
     margin-left: 20px;
   }
