--- a/sass/components/information/_information.scss
+++ b/sass/components/information/_information.scss
@@ -96,6 +96,7 @@
         line-height: 18px;
         color: #705A66;
         margin-left: 20px;
+        width: 245px;
     }
 
     .description-btn {
