--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -36,7 +36,7 @@
         background-image: url("../../img/register/bg-section-register.png");
         background-repeat: no-repeat;
         background-size: cover;
-        height: 810px
+        height: 830px;
     }
 
     .register-photo-text {
